[tool.poetry]
name = "ijs-reke"
version = "0.1.0"
description = ""
authors = ["LongarMD <mark.longar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
fiona = "^1.9.6"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
networkx = "^3.3"
plotly = "^5.22.0"
pyvis = "^0.3.2"
jinja2 = "^3.1.4"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
